--- a/css/base.css
+++ b/css/base.css
@@ -42,12 +42,18 @@ th {
 .rechts {
 	padding-top: 20px;
 }
+.leer {
+	width: 30%;
+	height: 80px;
+	float: left;
+	
+}
 .links {
 	float: left;
 	margin: 0;
 	padding-top: 20px;
-	padding-left: 40%;
-	width: 120px;
+	
+	width: 25%;
 	height: 80px;
 }
 .tab {
