--- a/css/base.css
+++ b/css/base.css
@@ -38,24 +38,11 @@ table tr.alt {
 th {
 	background: #e6e6e6;
 }
+p { 
+	text-align: center;
+	padding: 20px;
+}
 
-.rechts {
-	padding-top: 20px;
-}
-.leer {
-	width: 30%;
-	height: 80px;
-	float: left;
-	
-}
-.links {
-	float: left;
-	margin: 0;
-	padding-top: 20px;
-	
-	width: 25%;
-	height: 80px;
-}
 .tab {
 	clear: both;
 	background: #919191;
